Fix all overlap issues

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ main {
     font-size: calc(10px + 2vmin);
     color: white;
     height: 100vh;
+    text-align: center;
 }
 
 .placeholder-text {
@@ -36,6 +37,7 @@ main {
 
 .headline2 {
     padding-top: 40px;
+    margin-bottom: 5px;
 }
 
 
