--- a/src/components/ImageList/CustomImageList.css
+++ b/src/components/ImageList/CustomImageList.css
@@ -2,3 +2,7 @@
     width: 75%;
     height: 60%;
 }
+
+.customSubtitle {
+    font-size: calc(8px + 1vmin) !important;
+}
